components/baseui/src/main/kotlin/com/example/base/ui/ui/errors/ErrorView.kt
package com.example.base.ui.ui.errors

import androidx.lifecycle.LifecycleOwner

interface ErrorView : LifecycleOwner {
    fun showMessage(message: String)
}